sass/theme/sections/blocks/floating-circles.scss
.floating__circles{
    position:absolute;
    z-index:2;
    *{
        border-radius:100%;
        position:absolute;

    }
    &--left{
        left:6rem;
    }
    &--right{
        right:6rem;
    }

    &--1{
        :nth-child(1){
            background-color:$primary;
            width:3rem;
            height:3rem;
            top:-4rem;
            z-index:1;
        }

        :nth-child(2){
            background-color:transparent;
            border:1px solid #9BCB50;
            width:8rem;
            height:8rem;
            z-index:-1;

        }
    }

    &--2{
        :nth-child(1){
            background-color:$primary;
            width:2rem;
            height:2rem;
            top:-4rem;
            z-index:1;
        }

        :nth-child(2){
            background-color:transparent;
            border:1px solid #9BCB50;
            width:10rem;
            height:10rem;
            z-index:-1;

        }

        :nth-child(3){
            background-color:$accent;
            width:6rem;
            height:6rem;
            z-index:-1;

        }
    }

    &--3{
        :nth-child(1){
            background-color:$accent;
            width:2rem;
            height:2rem;
            top:-4rem;
            z-index:1;
        }

        :nth-child(2){
            background-color:transparent;
            border:1px solid $primary;
            width:8rem;
            height:8rem;
            z-index:-1;

        }

        :nth-child(3){
            background-color:#9BCB50;
            width:4rem;
            height:4rem;
            z-index:-1;

        }
    }

    &--4{
        :nth-child(1){
            background-color:$accent;
            width:2rem;
            height:2rem;
            top:-4rem;
            z-index:1;
        }

        :nth-child(2){
            background-color:transparent;
            border:1px solid #9BCB50;
            width:8rem;
            height:8rem;
            z-index:-1;

        }

        :nth-child(3){
            background-color:$primary;
            width:4rem;
            height:4rem;
            z-index:-1;

        }
    }

    &--4{
        :nth-child(1){
            background-color:$primary;
            width:2rem;
            height:2rem;
            top:-4rem;
            z-index:1;
        }

        :nth-child(2){
            background-color:#9BCB50;
            width:2rem;
            height:2rem;
            z-index:-1;

        }

        :nth-child(3){
            border: 1px solid $accent;
            background-color:transparent;
            width:6rem;
            height:6rem;
            z-index:-1;

        }
    }
}

